--- a/regtest/docker-compose.yml
+++ b/regtest/docker-compose.yml
@@ -7,8 +7,27 @@ services:
     restart: on-failure
     ports:
       - 8088:8080
+      - 8089:8081
     volumes:
       - rt-sync-data:/app/db
+
+  waterfalls:
+    build: ./waterfalls-service
+    environment:
+      - RPC_USER_PASSWORD=regtest:regtest
+    command: waterfalls --network elements-regtest --esplora-url http://esplora:4003/api --use-esplora --listen 0.0.0.0:3102 --add-cors
+    ports:
+      - 3102:3102
+
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "3120:3120"
+    volumes:
+      - ./waterfalls-service/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - waterfalls
+    restart: on-failure
 
   ssl-proxy:
     network_mode: "host"
