--- a/lib/wasm/Makefile
+++ b/lib/wasm/Makefile
@@ -8,8 +8,13 @@ init:
 	cargo install wasm-pack
 	rustup target add wasm32-unknown-unknown
 
-clippy:
+clippy: clippy-base clippy-node
+
+clippy-base:
 	$(CLANG_PREFIX) cargo clippy --all-targets --target=wasm32-unknown-unknown -- -D warnings
+
+clippy-node: 
+	$(CLANG_PREFIX) cargo clippy --all-targets --target=wasm32-unknown-unknown --features node-js -- -D warnings
 
 build: build-bundle build-deno build-node build-web
 
@@ -20,16 +25,21 @@ build-deno:
 	$(CLANG_PREFIX) wasm-pack build --target deno --release --out-dir pkg/deno
 
 build-node:
-	$(CLANG_PREFIX) wasm-pack build --target nodejs --release --out-dir pkg/node
+	$(CLANG_PREFIX) wasm-pack build --target nodejs --release --out-dir pkg/node --features node-js
 
 build-web:
 	$(CLANG_PREFIX) wasm-pack build --target web --release --out-dir pkg/web
 
-test:
-	$(CLANG_PREFIX) wasm-pack test --headless --firefox
+test: test-firefox test-node
+
+test-node:
+	$(CLANG_PREFIX) wasm-pack test --node --features node-js
+
+test-firefox:
+	$(CLANG_PREFIX) wasm-pack test --headless --firefox --features browser-tests
 
 test-chrome:
-	$(CLANG_PREFIX) wasm-pack test --headless --chrome
+	$(CLANG_PREFIX) wasm-pack test --headless --chrome --features browser-tests
 
 test-safari:
-	$(CLANG_PREFIX) wasm-pack test --headless --safari
+	$(CLANG_PREFIX) wasm-pack test --headless --safari --features browser-tests
