--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -14,6 +14,7 @@ frb = ["dep:flutter_rust_bridge"]
 uniffi-25 = []
 uniffi-28 = []
 regtest = []   # Enable regtest tests
+test-utils = ["sdk-common/test-utils"]
 
 [lints]
 workspace = true
@@ -31,10 +32,6 @@ log = { workspace = true }
 lwk_common = "0.9.0"
 lwk_signer = { version = "0.9.0", default-features = false }
 mockall = "0.13.1"
-rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
-    "backup",
-    "bundled",
-] }
 tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
 tokio_with_wasm = { version = "0.8.2", features = [
     "macros",
@@ -80,6 +77,10 @@ prost = "^0.11"
 tonic = { version = "^0.8", features = ["tls", "tls-webpki-roots"] }
 uuid = { version = "1.8.0", features = ["v4"] }
 boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "f78e159fe72e1c357e7830bc08d2b9e42a65362c", features = ["electrum"] }
+rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
+    "backup",
+    "bundled",
+] }
 
 # Wasm dependencies
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
@@ -95,6 +96,11 @@ tonic = { version = "0.12", default-features = false, features = [
     "prost",
 ] }
 boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "f78e159fe72e1c357e7830bc08d2b9e42a65362c" }
+rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
+    "backup",
+    "bundled",
+    "serialize"
+] }
 
 [dev-dependencies]
 sdk-common = { workspace = true, features = ["test-utils"] }
