--- a/lib/wasm/Cargo.toml
+++ b/lib/wasm/Cargo.toml
@@ -24,6 +24,7 @@ wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 web-time = "1.1.0"
 indexed_db_futures = "0.6.1"
+async-trait = "0.1.88"
 
 [dev-dependencies]
 breez-sdk-liquid = { path = "../core", features = ["test-utils"] }
@@ -32,6 +33,12 @@ getrandom = { version = "0.2", features = ["js"] }
 sdk-common = { workspace = true, features = ["test-utils"] }
 wasm-bindgen-test = "0.3.33"
 uuid = "1.16.0"
+tokio_with_wasm = { version = "0.8.2", features = [
+    "macros",
+    "rt",
+    "sync",
+    "time",
+] }
 
 [features]
 node-js = []
