--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -34,7 +34,7 @@ lwk_common = "0.9.0"
 lwk_signer = { version = "0.9.0", default-features = false }
 mockall = "0.13.1"
 tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
-tokio_with_wasm = { version = "0.8.2", features = [
+tokio_with_wasm = { version = "=0.8.2", features = [
     "macros",
     "rt",
     "sync",
@@ -79,7 +79,7 @@ maybe-sync = { version = "0.1.1", features = ["sync"] }
 prost = "^0.11"
 tonic = { version = "^0.8", features = ["tls", "tls-webpki-roots"] }
 uuid = { version = "1.8.0", features = ["v4"] }
-boltz-client = { git = "https://github.com/breez/boltz-rust", rev = "bdef4971f10a3757297ac7a8e2a862fcadfc2312", features = [
+boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "f25a8c180c5f1017677bc8ea01ed934ca0f8d2e1", features = [
     "electrum",
     "ws",
 ] }
@@ -101,7 +101,7 @@ tonic = { version = "0.12", default-features = false, features = [
     "codegen",
     "prost",
 ] }
-boltz-client = { git = "https://github.com/breez/boltz-rust", rev = "bdef4971f10a3757297ac7a8e2a862fcadfc2312", features = [
+boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "f25a8c180c5f1017677bc8ea01ed934ca0f8d2e1", features = [
     "ws",
 ] }
 rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
