--- a/packages/react-native/android/build.gradle
+++ b/packages/react-native/android/build.gradle
@@ -75,7 +75,9 @@ dependencies {
     // the Android platform versions of JNA (specifically libjnadispatch.so) are missing when downloading the Breez Liquid SDK from Jitpack.
     // Therefore we ignore the version of JNA that comes with the Breez Liquid SDK from Jitpack
     // and manually add one that does include the necessary Android platform binaries.
-    implementation("com.github.breez:breez-sdk-liquid:${getVersionFromNpmPackage()}") { exclude group:"net.java.dev.jna" } // remove for using locally built bindings during development
-    //implementation "org.jetbrains.kotlinx:atomicfu:0.23.1" 
     implementation("net.java.dev.jna:jna:5.14.0@aar")
+    // Comment this line for using locally built bindings during development
+    implementation("com.github.breez:breez-sdk-liquid:${getVersionFromNpmPackage()}") { exclude group:"net.java.dev.jna" }
+    // Uncomment this line for using locally built bindings during development
+    // implementation "org.jetbrains.kotlinx:atomicfu:0.23.1"
 }
