--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -24,7 +24,7 @@ members = ["bindings", "bindings/langs/react-native", "core", "wasm"]
 resolver = "2"
 
 [workspace.package]
-version = "0.9.1"
+version = "0.9.2-rc1"
 
 [workspace.lints.clippy]
 empty_line_after_doc_comments = "allow"
