--- a/packages/flutter/android/build.gradle
+++ b/packages/flutter/android/build.gradle
@@ -1,4 +1,4 @@
-version '0.9.1' // generated; do not edit
+version '0.9.2-rc1' // generated; do not edit
 group 'technology.breez.flutter_breez_liquid'
 
 buildscript {
