Add swapproxy to regtest environment

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "regtest/waterfalls-service/waterfalls"]
 	path = regtest/waterfalls-service/waterfalls
 	url = https://github.com/breez/waterfalls.git
+[submodule "regtest/swapproxy-service/swapproxy"]
+	path = regtest/swapproxy-service/swapproxy
+	url = https://github.com/breez/swapproxy.git
