--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -1,7 +1,7 @@
 name: breez_liquid
-description: Dart bindings for the Breez Liquid SDK
+description: Dart bindings for the Breez SDK - Nodeless
 version: 0.9.1
-homepage: https://breez.technology
+homepage: https://breez.technology/misty
 repository: https://github.com/breez/breez-sdk-liquid-dart
 publish_to: 'none'
 
