--- a/packages/flutter/android/settings.gradle
+++ b/packages/flutter/android/settings.gradle
@@ -3,6 +3,8 @@ rootProject.name = 'flutter_breez_liquid'
 dependencyResolutionManagement {
     repositories {
         maven { url("https://mvn.breez.technology/releases") }
+        google()
+        mavenCentral()
     }
     repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
 }
