--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -23,7 +23,7 @@ dev_dependencies:
 
 dependencies:
   ffi: ^2.1.4
-  flutter_rust_bridge: ">=2.4.0 <=2.9.0"
+  flutter_rust_bridge: 2.9.0
   freezed_annotation: ^3.0.0
   logging: ^1.3.0
   meta: ^1.16.0
