--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -24,6 +24,7 @@ chrono = "0.4"
 derivative = "2.2.0"
 env_logger = "0.11"
 flutter_rust_bridge = { version = "=2.9.0", features = ["chrono"], optional = true }
+futures = "0.3.31"
 log = { workspace = true }
 lwk_common = { git = "https://github.com/breez/lwk", rev = "c28d2a0dfc7b" }
 lwk_signer = { git = "https://github.com/breez/lwk", rev = "c28d2a0dfc7b", default-features = false }
