--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -17,13 +17,19 @@ dev_dependencies:
   build_runner: ^2.4.15
   ffigen: ^18.0.0
   freezed: ^3.0.4
+  integration_test:
+    sdk: flutter
   lints: ^5.1.1
   path: ^1.9.1
   test: ^1.25.15
 
+  flutter_test:
+    sdk: flutter
+  flutter:
+    sdk: flutter
 dependencies:
   ffi: ^2.1.4
-  flutter_rust_bridge: 2.9.0
+  flutter_rust_bridge: 2.11.1
   freezed_annotation: ^3.0.0
   logging: ^1.3.0
   meta: ^1.16.0
