--- a/.github/workflows/precompile-binaries.yml
+++ b/.github/workflows/precompile-binaries.yml
@@ -1,14 +1,15 @@
+name: Precompile Binaries
+
 on:
   release:
     types: [published]
+
   workflow_dispatch:
     inputs:
       ref:
-        description: 'commit/tag/branch reference'
+        description: 'Commit/tag/branch reference'
         required: true
         type: string
-
-name: Precompile Binaries
 
 jobs:
   Precompile:
@@ -20,24 +21,36 @@ jobs:
           - ubuntu-latest
           - macOS-latest
           - windows-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout breez-sdk-liquid repo
         uses: actions/checkout@v4
-        with: 
+        with:
           ref: ${{ inputs.ref || github.sha }}
-      - uses: dart-lang/setup-dart@v1
+
+      - name: Setup Dart
+        uses: dart-lang/setup-dart@v1
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "27.2"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install GTK
-        if: (matrix.os == 'ubuntu-latest')
-        run: sudo apt-get update && sudo apt-get install libgtk-3-dev
-      - name: Precompile
-        if: (matrix.os == 'macOS-latest') || (matrix.os == 'windows-latest')
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+
+      - name: Precompile (macOS & Windows)
+        if: matrix.os == 'macOS-latest' || matrix.os == 'windows-latest'
         run: dart run build_tool precompile-binaries -v --manifest-dir=../../../../lib/core --repository=breez/breez-sdk-liquid
         working-directory: packages/dart/cargokit/build_tool
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PRIVATE_KEY: ${{ secrets.RELEASE_PRIVATE_KEY }}
+
       - name: Precompile (with Android)
-        if: (matrix.os == 'ubuntu-latest')
+        if: matrix.os == 'ubuntu-latest'
         run: dart run build_tool precompile-binaries -v --manifest-dir=../../../../lib/core --repository=breez/breez-sdk-liquid --android-sdk-location=/usr/local/lib/android/sdk --android-ndk-version=24.0.8215888 --android-min-sdk-version=23
         working-directory: packages/dart/cargokit/build_tool
         env:
