--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,6 +16,7 @@ rustyline = { version = "13.0.0", features = ["derive"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1", features = ["macros"] }
+async-trait = "0.1.86"
 shellwords = "1.1.0"
 
 [patch.crates-io]
