--- a/lib/bindings/Cargo.toml
+++ b/lib/bindings/Cargo.toml
@@ -24,6 +24,7 @@ camino = "1.1.1"
 thiserror = { workspace = true }
 tokio = { version = "1", features = ["rt"] }
 once_cell = { workspace = true }
+sdk-common = { workspace = true }
 
 [build-dependencies]
 uniffi = { package = "uniffi", version = "0.28.0", features = [ "build" ] }
