--- a/packages/flutter_breez_liquid/android/build.gradle
+++ b/packages/flutter_breez_liquid/android/build.gradle
@@ -1,4 +1,4 @@
-// The Android Gradle Plugin builds the native code with the Android NDK.
+version '0.10.3' // generated; do not edit
 
 group 'com.flutter_rust_bridge.flutter_breez_liquid'
 version '1.0'
