--- a/packages/flutter_breez_liquid/justfile
+++ b/packages/flutter_breez_liquid/justfile
@@ -52,16 +52,16 @@ gen ios='true':
 	just codegen
 	@if {{ios}} == true; then just build-ios-framework; fi
 
-# Generate Dart/Flutter bindings & softlinks C headers
+# Generate Dart/Flutter bindings
 codegen:
 	mkdir -p ../lib/src/rust
 	{{frb_bin}}
 
-# Builds the uniFFI framework & softlinks C headers
+# Builds the uniFFI framework & copy C headers
 build-ios-framework:
 	bash scripts/build_ios_framework.sh
-	-ln -sf ../../lib/bindings/langs/flutter/breez_sdk_liquidFFI/include/breez_sdk_liquidFFI.h ../../packages/flutter_breez_liquid/ios/Classes/breez_sdk_liquidFFI.h
-	-ln -sf ../../lib/bindings/langs/flutter/breez_sdk_liquidFFI/include/breez_sdk_liquidFFI.h ../../packages/flutter_breez_liquid/macos/Classes/breez_sdk_liquidFFI.h
+	cp ../../lib/bindings/langs/flutter/breez_sdk_liquidFFI/include/breez_sdk_liquidFFI.h ../../packages/flutter_breez_liquid/ios/Classes/breez_sdk_liquidFFI.h
+	cp ../../lib/bindings/langs/flutter/breez_sdk_liquidFFI/include/breez_sdk_liquidFFI.h ../../packages/flutter_breez_liquid/macos/Classes/breez_sdk_liquidFFI.h
 
 # Update version number on podspec files & CMake scripts
 version:
