--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.3.3"
 anyhow = "1.0.80"
 bip39 = "2.0.0"
 breez-sdk-liquid = { path = "../lib/core" }
+breez-sdk-liquid-nwc = { path = "../lib/plugins/nwc" }
 clap = { version = "4.5.1", features = ["derive"] }
 log = "0.4.20"
 qrcode-rs = { version = "0.1", default-features = false }
@@ -17,6 +18,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1", features = ["macros"] }
 shellwords = "1.1.0"
+lazy_static = "1.5.0"
 
 [patch.crates-io]
 # https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits and rebased on secp256k1-zkp 0.11.0
